k8s/deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zt-security
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
